--- a/package.json
+++ b/package.json
@@ -7,7 +7,18 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "link:demo-form": "npm link dist/demo-form",
+    "lib:build": "ng build demo-form --prod",
+    "lib:serve": "ng build demo-form --watch",
+    "lib:build:all": "ng build demo-form --prod && npm run lib:schematics:build && npm run lib:schematics:postbuild",
+    "lib:publish": "npm run lib:build:all && npm publish ./dist/demo-form",
+    "lib:schematics:build": "node_modules/.bin/tsc -p ./projects/demo-form/tsconfig.schematics.json",
+    "lib:schematics:copy:schemas": "cd ./projects/demo-form && cp --parents schematics/*/schema.json ../../dist/demo-form/ && cp --parents schematics/*/*/schema.json ../../dist/demo-form/",
+    "lib:schematics:copy:files": "cd ./projects/demo-form && cp --parents -p schematics/**/**/files/** ../../dist/demo-form/ -r",
+    "lib:schematics:copy:collection": "cd ./projects/demo-form && cp schematics/collection.json ../../dist/demo-form/schematics/collection.json",
+    "lib:schematics:postbuild": "npm run lib:schematics:copy:schemas && npm run lib:schematics:copy:files && npm run lib:schematics:copy:collection",
+    "lib:schematics:test:ng-add":"schematics ./dist/demo-form:ng-add --dry-run=true"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +36,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
+    "@angular-devkit/build-ng-packagr": "~0.901.12",
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
@@ -39,6 +51,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
