--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^10.0.8",
+    "@angular-devkit/schematics": "^10.0.8",
     "@angular/animations": "~9.1.1",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
