--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular-devkit/core": "^10.0.8",
     "@angular-devkit/schematics": "^10.0.8",
     "@angular/animations": "~9.1.1",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
@@ -38,6 +39,7 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "rxjs": "~6.5.4",
+    "schematics-utilities": "^2.0.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
