調整 package.json scripts

--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "link:demo-form": "npm link dist/demo-form",
+    "unlink:demo-form": "npm unlink dist/demo-form",
     "lib:build": "ng build demo-form --prod",
     "lib:serve": "ng build demo-form --watch",
-    "lib:build:all": "ng build demo-form --prod && npm run lib:schematics:build && npm run lib:schematics:postbuild",
+    "lib:build:all": "npm run lib:build && npm run lib:schematics:build && npm run lib:schematics:postbuild:all",
     "lib:publish": "npm run lib:build:all && npm publish ./dist/demo-form",
     "lib:schematics:build": "node_modules/.bin/tsc -p ./projects/demo-form/tsconfig.schematics.json",
-    "lib:schematics:copy:schemas": "cd ./projects/demo-form && cp --parents schematics/*/schema.json ../../dist/demo-form/ && cp --parents schematics/*/*/schema.json ../../dist/demo-form/",
-    "lib:schematics:copy:files": "cd ./projects/demo-form && cp --parents -p schematics/**/**/files/** ../../dist/demo-form/ -r",
-    "lib:schematics:copy:collection": "cd ./projects/demo-form && cp schematics/collection.json ../../dist/demo-form/schematics/collection.json",
-    "lib:schematics:postbuild": "npm run lib:schematics:copy:schemas && npm run lib:schematics:copy:files && npm run lib:schematics:copy:collection",
-    "lib:schematics:test:ng-add":"schematics ./dist/demo-form:ng-add --dry-run=true"
+    "lib:schematics:copy:ng-add:schemas": "cd ./projects/demo-form && cp --parents schematics/*/schema.json ../../dist/demo-form/",
+    "lib:schematics:copy:ng-add:collection": "cd ./projects/demo-form && cp schematics/collection.json ../../dist/demo-form/schematics/collection.json",
+    "lib:schematics:postbuild:ng-add": "npm run lib:schematics:copy:ng-add:schemas && npm run lib:schematics:copy:ng-add:collection",
+    "lib:schematics:copy:ng-generate:schemas": "cd ./projects/demo-form && cp --parents schematics/*/*/schema.json ../../dist/demo-form/",
+    "lib:schematics:copy:ng-generate:files": "cd ./projects/demo-form && cp --parents -p schematics/**/**/files/** ../../dist/demo-form/ -r",
+    "lib:schematics:copy:ng-generate:collection": "cd ./projects/demo-form && cp schematics/collection.json ../../dist/demo-form/schematics/collection.json",
+    "lib:schematics:postbuild:ng-generate": "npm run lib:schematics:copy:ng-generate:schemas && npm run lib:schematics:copy:ng-generate:files && npm run lib:schematics:copy:ng-generate:collection",
+    "lib:schematics:postbuild:all": "npm run lib:schematics:postbuild:ng-add && npm run lib:schematics:postbuild:ng-generate",
+    "lib:schematics:test:ng-add": "npm run lib:build && npm run lib:schematics:build && npm run lib:schematics:postbuild:ng-add && schematics ./dist/demo-form:ng-add --dry-run=true",
+    "lib:schematics:test:ng-generate:loginForm": "npm run lib:build && npm run lib:schematics:build && npm run lib:schematics:postbuild:ng-generate && schematics ./dist/demo-form:loginForm --dry-run=true"
   },
   "private": true,
   "dependencies": {
