--- a/angular.json
+++ b/angular.json
@@ -3,127 +3,6 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "my-lib-workspace": {
-      "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        }
-      },
-      "root": "",
-      "sourceRoot": "src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/my-lib-workspace",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
-            "aot": true,
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
-                }
-              ]
-            }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "my-lib-workspace:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "my-lib-workspace:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "my-lib-workspace:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "my-lib-workspace:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "my-lib-workspace:serve:production"
-            }
-          }
-        }
-      }
-    },
     "demo-form": {
       "projectType": "library",
       "root": "projects/demo-form",
@@ -284,6 +163,127 @@
           }
         }
       }
+    },
+    "test-libraries": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "root": "projects/test-libraries",
+      "sourceRoot": "projects/test-libraries/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/test-libraries",
+            "index": "projects/test-libraries/src/index.html",
+            "main": "projects/test-libraries/src/main.ts",
+            "polyfills": "projects/test-libraries/src/polyfills.ts",
+            "tsConfig": "projects/test-libraries/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "projects/test-libraries/src/favicon.ico",
+              "projects/test-libraries/src/assets"
+            ],
+            "styles": [
+              "projects/test-libraries/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/test-libraries/src/environments/environment.ts",
+                  "with": "projects/test-libraries/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "test-libraries:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "test-libraries:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "test-libraries:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/test-libraries/src/test.ts",
+            "polyfills": "projects/test-libraries/src/polyfills.ts",
+            "tsConfig": "projects/test-libraries/tsconfig.spec.json",
+            "karmaConfig": "projects/test-libraries/karma.conf.js",
+            "assets": [
+              "projects/test-libraries/src/favicon.ico",
+              "projects/test-libraries/src/assets"
+            ],
+            "styles": [
+              "projects/test-libraries/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/test-libraries/tsconfig.app.json",
+              "projects/test-libraries/tsconfig.spec.json",
+              "projects/test-libraries/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/test-libraries/e2e/protractor.conf.js",
+            "devServerTarget": "test-libraries:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "test-libraries:serve:production"
+            }
+          }
+        }
+      }
     }},
-  "defaultProject": "my-lib-workspace"
+  "defaultProject": "test-libraries"
 }
