--- a/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.spec.ts.template
+++ b/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.spec.ts.template
@@ -2,6 +2,7 @@
 import { async, ComponentFixture, TestBed } from '@angular/core/testing';
 import { ReactiveFormsModule } from '@angular/forms';
 import { NoopAnimationsModule } from '@angular/platform-browser/animations';
+import { DemoFormModule } form 'demo-form';
 
 import { <%= classify(name) %>Component } from './<%= dasherize(name) %>.component';
 
@@ -14,7 +15,8 @@ describe('<%= classify(name) %>Component', () => {
       declarations: [ <%= classify(name) %>Component ],
       imports: [
         NoopAnimationsModule,
-        ReactiveFormsModule
+        ReactiveFormsModule,
+        DemoFormModule
       ]
     }).compileComponents();
   }));
