--- a/projects/demo-form/package.json
+++ b/projects/demo-form/package.json
@@ -6,10 +6,10 @@
     "@angular/core": "^9.1.12"
   },
   "dependencies": {
-    "tslib": "^1.10.0",
     "@angular-devkit/schematics": "^9.1.1",
     "@angular/cdk": "^9.2.1",
-    "schematics-utilities": "^2.0.2"
+    "schematics-utilities": "^2.0.2",
+    "tslib": "^2.0.0"
   },
   "schematics": "./schematics/collection.json"
 }
