新增 tsconfig.schematics.prod.json

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "unlink:demo-form": "npm unlink dist/demo-form",
     "lib:build": "ng build demo-form --prod",
     "lib:serve": "ng build demo-form --watch",
-    "lib:build:all": "npm run lib:build && npm run lib:schematics:build && npm run lib:schematics:postbuild:all",
+    "lib:build:all": "npm run lib:build && npm run lib:schematics:build:prod && npm run lib:schematics:postbuild:all",
     "lib:publish": "npm run lib:build:all && npm publish ./dist/demo-form",
     "lib:schematics:build": "node_modules/.bin/tsc -p ./projects/demo-form/tsconfig.schematics.json",
+    "lib:schematics:build:prod": "node_modules/.bin/tsc -p ./projects/demo-form/tsconfig.schematics.prod.json",
     "lib:schematics:copy:collection": "cd ./projects/demo-form && cp schematics/collection.json ../../dist/demo-form/schematics/collection.json",
     "lib:schematics:copy:ng-add:schemas": "cd ./projects/demo-form && cp --parents schematics/*/schema.json ../../dist/demo-form/",
     "lib:schematics:postbuild:ng-add": "npm run lib:schematics:copy:ng-add:schemas && npm run lib:schematics:copy:collection",
