--- a/projects/demo-form/tsconfig.schematics.prod.json
+++ b/projects/demo-form/tsconfig.schematics.prod.json
@@ -13,7 +13,7 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "noUnusedParameters": true,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "rootDir": "schematics",
     "outDir": "../../dist/demo-form/schematics",
     "skipDefaultLibCheck": true,
