--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.0",
     "@angular-devkit/build-ng-packagr": "~0.1001.0",
+    "@angular-devkit/schematics-cli": "^0.1001.0",
     "@angular/cli": "~10.1.0",
     "@angular/compiler-cli": "~10.1.0",
     "@angular/language-service": "~10.1.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
