--- a/projects/demo-form/tsconfig.schematics.json
+++ b/projects/demo-form/tsconfig.schematics.json
@@ -12,7 +12,7 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noUnusedLocals": false,
     "rootDir": "schematics",
     "outDir": "../../dist/demo-form/schematics",
