--- a/projects/demo-form/package.json
+++ b/projects/demo-form/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@angular-devkit/schematics": "^9.1.1",
     "@angular/cdk": "^9.2.1",
-    "schematics-utilities": "^2.0.2",
+    "@schematics/angular":"10.1.0",
     "tslib": "^2.0.0"
   },
   "schematics": "./schematics/collection.json"
