--- a/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.ts.template
+++ b/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.ts.template
@@ -13,6 +13,9 @@ import { FormBuilder } from '@angular/forms';
   styleUrls: ['./<%= dasherize(name) %>.component.<%= style %>']<% } %>
 })
 export class <%= classify(name) %>Component {
+
+  version = '<%=getVersion()%>';
+
   loginForm = this.fb.group({
     account: '',
     password: '',
