--- a/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.__style__.template
+++ b/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.__style__.template
@@ -10,6 +10,14 @@
     margin: 10px;
     height: 300px;
     width: 400px;
+
+    .version{
+      text-align: right;
+      margin-top: 5px;
+      font-style:italic;
+      color: gray;
+    }
+
   }
 
 }
