--- a/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.spec.ts.template
+++ b/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.spec.ts.template
@@ -1,14 +1,13 @@
 
-import { async, ComponentFixture, TestBed } from '@angular/core/testing';
+import { TestBed , waitForAsync } from '@angular/core/testing';
 import { ReactiveFormsModule } from '@angular/forms';
 import { NoopAnimationsModule } from '@angular/platform-browser/animations';
-import { DemoFormModule } form 'demo-form';
 
 import { <%= classify(name) %>Component } from './<%= dasherize(name) %>.component';
 
+import { DemoFormModule } form 'demo-form';
+
 describe('<%= classify(name) %>Component', () => {
-  let component: <%= classify(name) %>Component;
-  let fixture: ComponentFixture<<%= classify(name) %>Component>;
 
   beforeEach(async(() => {
     TestBed.configureTestingModule({
@@ -21,13 +20,10 @@ describe('<%= classify(name) %>Component', () => {
     }).compileComponents();
   }));
 
-  beforeEach(() => {
-    fixture = TestBed.createComponent(<%= classify(name) %>Component);
-    component = fixture.componentInstance;
-    fixture.detectChanges();
+  it('should create the app', () => {
+    const fixture = TestBed.createComponent(<%= classify(name) %>Component);
+    const app = fixture.componentInstance;
+    expect(app).toBeTruthy();
   });
 
-  it('should compile', () => {
-    expect(component).toBeTruthy();
-  });
 });
