調整 .spec.ts.template

--- a/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.spec.ts.template
+++ b/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.spec.ts.template
@@ -5,11 +5,11 @@ import { NoopAnimationsModule } from '@angular/platform-browser/animations';
 
 import { <%= classify(name) %>Component } from './<%= dasherize(name) %>.component';
 
-import { DemoFormModule } form 'demo-form';
+import { DemoFormModule } from 'demo-form';
 
 describe('<%= classify(name) %>Component', () => {
 
-  beforeEach(async(() => {
+  beforeEach(waitForAsync(() => {
     TestBed.configureTestingModule({
       declarations: [ <%= classify(name) %>Component ],
       imports: [
