--- a/projects/demo-form/package.json
+++ b/projects/demo-form/package.json
@@ -6,6 +6,9 @@
     "@angular/core": "^9.1.12"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "@angular-devkit/schematics": "^9.1.1",
+    "@angular/cdk": "^9.2.1",
+    "@schematics/angular":"10.1.0"
   }
 }
