--- a/projects/demo-form/package.json
+++ b/projects/demo-form/package.json
@@ -10,5 +10,6 @@
     "@angular-devkit/schematics": "^9.1.1",
     "@angular/cdk": "^9.2.1",
     "@schematics/angular":"10.1.0"
-  }
+  },
+  "schematics": "./schematics/collection.json"
 }
