調整 tsc 編譯，cp 改用 cpy-cli 兼容 windows

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "lib:serve": "ng build demo-form --watch",
     "lib:build:all": "npm run lib:build && npm run lib:schematics:build:prod && npm run lib:schematics:postbuild:all",
     "lib:publish": "npm run lib:build:all && npm publish ./dist/demo-form",
-    "lib:schematics:build": "node_modules/.bin/tsc -p ./projects/demo-form/tsconfig.schematics.json",
-    "lib:schematics:build:prod": "node_modules/.bin/tsc -p ./projects/demo-form/tsconfig.schematics.prod.json",
-    "lib:schematics:copy:collection": "cd ./projects/demo-form && cp schematics/collection.json ../../dist/demo-form/schematics/collection.json",
-    "lib:schematics:copy:ng-add:schemas": "cd ./projects/demo-form && cp --parents schematics/*/schema.json ../../dist/demo-form/",
+    "lib:schematics:build": "tsc -p ./projects/demo-form/tsconfig.schematics.json",
+    "lib:schematics:build:prod": "tsc -p ./projects/demo-form/tsconfig.schematics.prod.json",
+    "lib:schematics:copy:collection": "cd ./projects/demo-form && cpy schematics/collection.json ../../dist/demo-form/schematics/collection.json",
+    "lib:schematics:copy:ng-add:schemas": "cd ./projects/demo-form && cpy --parents schematics/*/schema.json ../../dist/demo-form/",
     "lib:schematics:postbuild:ng-add": "npm run lib:schematics:copy:ng-add:schemas && npm run lib:schematics:copy:collection",
-    "lib:schematics:copy:ng-generate:schemas": "cd ./projects/demo-form && cp --parents schematics/*/*/schema.json ../../dist/demo-form/",
-    "lib:schematics:copy:ng-generate:files": "cd ./projects/demo-form && cp --parents -p schematics/**/**/files/** ../../dist/demo-form/ -r",
+    "lib:schematics:copy:ng-generate:schemas": "cd ./projects/demo-form && cpy --parents schematics/*/*/schema.json ../../dist/demo-form/",
+    "lib:schematics:copy:ng-generate:files": "cd ./projects/demo-form && cpy --parents schematics/**/**/files/** ../../dist/demo-form/ -r",
     "lib:schematics:postbuild:ng-generate": "npm run lib:schematics:copy:ng-generate:schemas && npm run lib:schematics:copy:ng-generate:files && npm run lib:schematics:copy:collection",
     "lib:schematics:postbuild:all": "npm run lib:schematics:postbuild:ng-add && npm run lib:schematics:postbuild:ng-generate",
     "lib:schematics:test:ng-add": "npm run lib:build && npm run lib:schematics:build && npm run lib:schematics:postbuild:ng-add && schematics ./dist/demo-form:ng-add --project=test-schematics --dry-run=true",
@@ -55,6 +55,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "cpy-cli": "^3.1.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
