調整 loginForm 為較易懂

--- a/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.html.template
+++ b/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.html.template
@@ -2,7 +2,7 @@
   <form class="fb-form" [formGroup]="loginForm">
     <lib-fb-input placeholder="帳號"  formControlName="account"></lib-fb-input>
     <lib-fb-password-input placeholder="密碼"  formControlName="password"></lib-fb-password-input>
-    <lib-fb-button (buttonClick)="login()">登入</lib-fb-button>
-    <div class="version">{{ version }}</div>
+    <lib-fb-button (buttonClick)="login()">登入</lib-fb-button><% if(addVersion) { %>
+    <div class="version">{{ version }}</div> <% } %>
   </form>
 </div>
