--- a/projects/demo-form/tsconfig.schematics.prod.json
+++ b/projects/demo-form/tsconfig.schematics.prod.json
@@ -12,8 +12,8 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "noUnusedParameters": true,
-    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "noUnusedLocals": false,
     "rootDir": "schematics",
     "outDir": "../../dist/demo-form/schematics",
     "skipDefaultLibCheck": true,
