--- a/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.spec.ts.template
+++ b/projects/demo-form/schematics/ng-generate/login-form/files/__path__/__name@dasherize__/__name@dasherize__.component.spec.ts.template
@@ -11,7 +11,9 @@ describe('<%= classify(name) %>Component', () => {
 
   beforeEach(waitForAsync(() => {
     TestBed.configureTestingModule({
-      declarations: [ <%= classify(name) %>Component ],
+      declarations: [
+        <%= classify(name) %>Component
+      ],
       imports: [
         NoopAnimationsModule,
         ReactiveFormsModule,
